# scrap-rs

./: Cargo.toml  scrap.ll  shell.nix
src/: generator.rs  main.rs  parser.rs  sir.rs
src/passes/: build_function_params.rs  build_global_references.rs  mod.rs  remove_scopes.rs
